Make nav fixed on mobile, add transition from right to left, fix desktop version

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,56 +10,69 @@
 	margin-bottom: 96px;
 
 	&__nav {
-		padding: 40px 0 163px;
+		padding-top: 30px;
+		width: 300px;
+		position: fixed;
+		top: 0;
+		z-index: 999;
 		@include flex(space-between, center);
 
-		.logo img {
-			position: relative;
-			z-index: 999;
-			width: 144px;
-			height: 24px;
-		}
-
-		&-list {
-			display: none;
-		}
-
+		.logo,
 		.hamburger {
 			position: relative;
 			z-index: 999;
 		}
 
-		&-mobile {
-			min-height: 650px;
-			width: 100%;
-			position: absolute;
+		.logo {
+			height: 24px;
+
+			img {
+				width: 144px;
+			}
+		}
+
+		.nav {
+			position: fixed;
 			top: 0;
 			left: 0;
+			width: 100%;
+			height: 100%;
 			@include flex(center, center);
-			text-align: center;
 			background-color: $black;
+			text-align: center;
+			z-index: 100;
+			visibility: hidden;
+			transform: translateX(100%);
+			transition: 0.3s cubic-bezier(0.33, 0.85, 0.4, 0.96);
 
-			ul li {
-				display: flex;
-				flex-direction: column;
+			&.active {
+				visibility: visible;
+				transform: translateX(0);
+				transition-duration: 0.3s;
+			}
 
-				a {
-					font-family: $josefinSans;
-					font-weight: 300;
-					font-size: 24px;
-					line-height: 25px;
-					text-transform: uppercase;
+			&__list {
+				li {
 					margin-bottom: 24px;
+
+					a {
+						font-family: $josefinSans;
+						font-weight: 300;
+						font-size: 24px;
+						line-height: 25px;
+						text-transform: uppercase;
+					}
 				}
 			}
+		}
 
-			ul li a:last-child {
-				margin-bottom: 0;
-			}
+		.nav__list li:last-child {
+			margin-bottom: 0;
 		}
 	}
 
 	&__content {
+		transform: translate(0, 100%);
 		padding: 26px 24px 24px;
 		border: 2px solid $white;
 
@@ -69,8 +82,20 @@
 	}
 }
 
+@media screen and (min-width: 375px) {
+	.header {
+		&__nav {
+			width: 327px;
+		}
+	}
+}
+
 @media screen and (min-width: 576px) {
 	.header {
+		&__nav {
+			width: 540px;
+		}
+
 		&__content {
 			max-width: 320px;
 		}
@@ -81,33 +106,68 @@
 	.header {
 		background: url("../../assets/images/desktop/image-hero.jpg") no-repeat center;
 		background-size: 100% 100%;
+
+		&__nav {
+			width: 720px;
+		}
 	}
 }
 
 @media screen and (min-width: 992px) {
 	.header {
-		margin-bottom: 160px;
 		&__nav {
-			padding: 64px 0 123px;
-
-			&-list {
-				@include flex(space-between, center);
-				gap: 32px;
-			}
+			padding: 64px 0 130px;
+			width: 100%;
+			position: static;
+			@include flex(space-between, center);
 
 			.hamburger {
 				display: none;
 			}
 
-			.logo img {
-				width: 192px;
+			.logo {
 				height: 32px;
+
+				img {
+					width: 192px;
+					height: 100%;
+				}
+			}
+
+			.nav {
+				position: static;
+				background-color: transparent;
+				width: 100%;
+				height: 100%;
+				display: flex;
+				justify-content: flex-end;
+				text-align: left;
+				visibility: visible;
+				transform: none;
+				transition: none;
+
+				&__list {
+					display: flex;
+					gap: 32px;
+
+					li {
+						margin-bottom: 0;
+
+						a {
+							font-family: $alata;
+							font-weight: 400;
+							font-size: 15px;
+							text-transform: none;
+						}
+					}
+				}
 			}
 		}
 
 		&__content {
 			padding: 40px;
 			max-width: 650px;
+			transform: none;
 
 			h1 {
 				max-width: 570px;
